--- a/index.html
+++ b/index.html
@@ -868,7 +868,7 @@
     <h2>Infographic</h2>
     <p>Click on the image or hover over the hotspots to learn more about surveillance systems in China.</p>
     <div class="infographic-container">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e2/China_mass_surveillance.svg/2560px-China_mass_surveillance.svg.png" alt="Infographic on Politics and Justice in China" id="infographic-img" />
+      <img src="Power vs. Freedom.png" alt="Infographic on Politics and Justice in China" id="infographic-img" />
       
       <div class="infographic-overlay">
         <div class="infographic-text">
