--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Politics, Power & Justice in China</title>
+  <title>The Impact of Political Power on Human Rights in China</title>
   <style>
     /* ===== CSS VARIABLES ===== */
     :root {
