--- a/index.html
+++ b/index.html
@@ -1114,7 +1114,7 @@
   </div>
 
   <header>
-    <h1>Politics, Power & Justice in China</h1>
+    <h1>The Impact of Political Power on Human Rights in China</h1>
     <p style="text-align: center;">Understanding the control and justice challenges faced by citizens</p>
   </header>
 
